# ml-zoomcamp-hw

./: .gitignore  Dockerfile  LICENSE  hw-1.ipynb  hw-8.ipynb  main.py  marketing.py  predict.py  pyproject.toml  train.py
Car Price Prediction/: car_price.ipynb
Churn Prediction/: churn_prediction.ipynb
Churn Prediction Service/: predict.py  workshop-uv-fastapi.ipynb
Credit Risk Scoring/: credit_risk.ipynb
Deep Learning/: notebook.ipynb
hw-1/: hw-1.ipynb
hw-2/: hw-2.ipynb
hw-3/: hw-3.ipynb
hw-4/: hw-4.ipynb
hw-6/: fuel_efficiency.ipynb
hw-8/: hw-8.ipynb
hw-9/: Dockerfile  notebook.ipynb  test.py
