[project]
name = "ml-zoomcamp-hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "onnx>=1.20.0",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.1",
]
